A11y Updates, contrast ratio fix.

--- a/src/components/writer/Writer.css
+++ b/src/components/writer/Writer.css
@@ -7,7 +7,7 @@
   border: 0;
   font-size: 50%;
   background-color: transparent;
-  color: rgba(0, 0, 0, .5);
+  color: rgba(0, 0, 0, .6);
   flex: 0 0 2em;
   height: 100vh;
   outline: none;
